Using copyOf to create an immutable set instead of using immutable wrapper